# SwarmMind

./: .gitignore  CMakeLists.txt  README.md  config.example.yaml
src/: agent.cpp  agent.h  blackboard.cpp  blackboard.h  config.cpp  config.h  console.h  inline_command.cpp  inline_command.h  llm_client.cpp  llm_client.h  main.cpp  tool.cpp  tool.h  types.h
src/tools/: bash.cpp  bash.h  blackboard_post.cpp  blackboard_post.h  edit_file.cpp  edit_file.h  read_file.cpp  read_file.h  write_file.cpp  write_file.h
tests/: test_blackboard.cpp  test_inline_command.cpp  test_tools.cpp
